--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,41 +1,18 @@
-<section class="container">  
+<% stylesheet_link_tag 'posts/index' %>
 
-    <div class="user-box">
-        <img class="image-user" src=<%= @user.photo %> alt="user"/>
-        <div class="user-info">
-            <p class="user-name"><%= @user.name %></p>
-            <p class="user-post">Number of posts: <%= @user.posts_counter%></p> 
-        </div>   
-    </div>   
-
-    <% @posts.each do |post| %>
-        <div class="post-info">
-            <%= link_to user_post_path(@user.id, post.id) do %>
-                <p class="post-title">Post : <%= post.title %> by <%= post.author.name %></p>
-                <p class="post-text"><%= post.text %></p>
-                <p class="post-text-2">Comments: <span><%= post.comments_counter || 0 %>, Likes: <%= post.likes_counter || 0 %></span></p>  
-            <% end %>      
-        </div>
-        
-        <div class="comment-info">
-            <% post.recent_comments.each do |comment| %>
-                <p> 
-                    <span>
-                        <%= comment.author.name %>:
-                    </span> 
-                    <span>
-                        <%= comment.text %>
-                    </span>
-                </p>
-            <% end %>
-        </div>            
-        
-    <% end %>   
-
-    <div class="button-user">
-        <button class="button">
-            Pagination
-        </button>
-    </div>
-    
-</section>
+<div id="all-posts-page" class="content">
+  <%= render 'users/user_tile', user: @user %>
+  <div class="button-container">
+    <%= link_to new_user_post_path(@user) do %>
+      <button>Create a new Post</button>
+    <% end %>
+  </div>
+  <ul>
+    <% @all_posts.each do |post| %>
+      <li>
+        <%= render 'posts/post_tile', post: post, user: @user, expanded: false %>
+        <%= render 'posts/comments_tile', comments: post.recent_comments %>
+      </li>
+    <% end %>
+  </ul>
+</div>
