--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,23 +1,6 @@
-<section class="container">    
-    <div class="post-info">
-        <div class="post-title-box">
-            <p class="post-title">Post : <%= @post.title %> by <%= @post.author.name %></p>
-            <p class="comment-text">Comments: <%= @post.comments_counter || 0 %>, Likes: <%= @post.likes_counter || 0 %></p>
-        </div>
-        <p><%= @post.text %></p>
-    </div>
-    <div class="comment-info">
-        <% @post.recent_comments.each do |comment| %>
-            <div>
-                <p> 
-                    <span>
-                        <%= comment.author.name %>:
-                    </span> 
-                    <span>
-                        <%= comment.text %>
-                    </span>
-                </p>
-            </div>            
-        <% end %>
-    </div>   
-</section>
+<% stylesheet_link_tag 'posts/show' %>
+
+<div id="post-page" class="content">
+  <%= render 'posts/expanded_post_tile', post: @post %>
+  <%= render 'posts/comments_tile', comments: @post.comments %>
+</div>
