--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,11 @@
-<section class="container">  
-    <% @users.each do |user| %>       
-        <div class="user-box">            
-            <img class="image-user" src=<%= user.photo %> alt="user">
-            <div class="user-info">
-                <p class="user-name"><%= link_to user.name, user %></p>
-                <p class="user-post">Number of posts: <%= user.posts_counter%></p> 
-            </div>
-        </div>
-    <% end %>   
-    
-</section>
+<% stylesheet_link_tag 'users/index' %>
+
+<div id="users-list-page" class="content">
+  <ul>
+    <% @users.each do |user| %>
+      <li>
+        <%= render 'users/user_tile', user: user %>
+      </li>
+    <% end %>
+  </ul>
+</div>
