--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,26 @@
-<section class="container">
-    <div class="user-box">
-        <img class="image-user" src=<%= @user.photo %> alt="user"/>
-        <div class="user-info">
-            <p class="user-name"><%= @user.name %></p>
-            <p class="user-post">Number of posts: <%= @user.posts_counter%></p> 
-        </div>   
-    </div>   
-    <p class="user-bio"><%= @user.bio %></p>
-    
-    <% @user.recent_posts.each do |post| %>
-        <%= link_to user_post_path(@user.id, post.id) do %>
-        <div class="user-recent-post">
-            <p class="post-title"><strong>Post</strong> : <%= post.title %></p>
-            <p class="post-text"><%= post.text %></p>
-            <h3 class="counters">Comments: <%= post.comments_counter %>
-                Likes: <%= post.likes_counter %><h3>         
-        </div>
-        <% end %>       
-    <% end %>    
+<% stylesheet_link_tag 'users/show' %>
 
-    <div class="button-user">
-        <button class="button">
-        <%= link_to "See all posts", user_posts_path(@user), class:"text-button" %>
-        </button>
+<div id="user-details-page" class="content">
+  <%= render 'users/user_tile', user: @user %>
+  <div class="bio-area">
+    <div id="bio">
+      <p id="bio-tag">Bio</p>
+      <p><%= @user.bio %></p>
     </div>
-</section>
+    <%= link_to new_user_post_path(@user) do %>
+      <button>Create a new Post</button>
+    <% end %>
+  </div>
+  <ul>
+    <% @all_posts.each do |post| %>
+      <li>
+        <%= render 'posts/post_tile', post: post, user:@user, expanded: false %>
+      </li>
+    <% end %>
+  </ul>
+  <div id="all-posts-button">
+    <%= link_to user_posts_path(@user) do %>
+      <button class="custom-button">See all posts</button>
+    <% end %>
+  </div>
+</div>
