--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,10 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body>
-      <% flash.each do |type, msg| %>
-      <div class="alert">
-        <%= msg %>
-      </div>
-    <% end %>
-    
     <%= yield %>
   </body>
 </html>
