--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,18 +1,15 @@
-<% stylesheet_link_tag 'posts/index' %>
-
-<div id="all-posts-page" class="content">
-  <%= render 'users/user_tile', user: @user %>
-  <div class="button-container">
-    <%= link_to new_user_post_path(@user) do %>
-      <button>Create a new Post</button>
-    <% end %>
-  </div>
-  <ul>
-    <% @all_posts.each do |post| %>
-      <li>
-        <%= render 'posts/post_tile', post: post, user: @user, expanded: false %>
-        <%= render 'posts/comments_tile', comments: post.recent_comments %>
-      </li>
-    <% end %>
-  </ul>
-</div>
+  <p class="post_title">User's posts</p>
+  <%= render "shared/user_info", user: @user %>   
+  <% @user_posts.each_with_index do |post,index|%>
+    <div>
+       <%= render "shared/post_info", post: post, index: index%>
+    </div>
+    <div class=comments_container>
+        <% post.last_comments.each do |comment| %>
+          <p class="comment"> <%=User.find(comment.author_id).name%>:  <%=comment.text%> </p>
+        <%end%> 
+    </div>
+  <%end%>
+  <div class="pagination">
+    <button>Pagination</button>
+  <div>
