--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,26 +1,12 @@
-<% stylesheet_link_tag 'users/show' %>
-
-<div id="user-details-page" class="content">
-  <%= render 'users/user_tile', user: @user %>
-  <div class="bio-area">
-    <div id="bio">
-      <p id="bio-tag">Bio</p>
-      <p><%= @user.bio %></p>
-    </div>
-    <%= link_to new_user_post_path(@user) do %>
-      <button>Create a new Post</button>
-    <% end %>
+  <header class="user_title">User's data</header>
+  <%=render "shared/user_info" , user: @user%>
+  <div class="bio">
+    <p>Bio</p>
+    <p><%= @user.bio%></p>
   </div>
-  <ul>
-    <% @all_posts.each do |post| %>
-      <li>
-        <%= render 'posts/post_tile', post: post, user:@user, expanded: false %>
-      </li>
-    <% end %>
-  </ul>
-  <div id="all-posts-button">
-    <%= link_to user_posts_path(@user) do %>
-      <button class="custom-button">See all posts</button>
-    <% end %>
+  <% @user_posts.each_with_index do |post,index|%>
+    <%= render "shared/post_info", post: post, index: index%>
+  <% end %>
+  <div class="all_posts">
+    <button>See all posts</button>
   </div>
-</div>
