--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,33 +1,48 @@
-<div class="rounded-md border border-zinc-300 bg-white/60 p-2 mb-4">
-  <h2 class="font-semibold text-xl text-cyan-900"><%= @post.title %> <small class="text-base text-sky-600">by <%= @post.author.name %></small></h2>
-  <p class="text-right text-sm font-bold text-emerald-500/60">Comments:
-    <%= @post.commentscounter || 0 %>
-    Likes:
-    <%= @post.likescounter || 0 %></p>
-  <p class="text-cyan-900/80 my-4"><%= @post.text %></p>
-  <hr>
-  <h4 class="font-semibold text-cyan-700 mt-4">Comments:</h4>
-  <p class="text-right my-2"><%= link_to 'Add Comment', new_user_post_comment_path(@post.author, @post), class: "border border-zinc-300 px-2 py-1 bg-emerald-500 text-zinc-100 font-bold rounded-md" %></p>
-  <% unless @post.commentscounter == 0 %>
-    <ul class="my-3">
-      <% @post.comments.each do |comment| %>
-        <li class="odd:text-cyan-800 even:text-cyan-600 text-sm my-2">
-          <span class="font-semibold"><%= comment.author.name %></span> says: <%= comment.text %>
-        </li>
-      <% end %>
-    </ul>
+<div class="card m-3" style="max-width: 540px;">
+
+    <div>Post # 
+     <%= @post.id %>
+     by <%= @post.author.name %>
+     <%= @post.text %></div>
+    Comments: <% if @post.comments_counter != nil %>
+    <%= @post.comments_counter %>
+ <% else %>
+ 0 
+ <% end %>
+    Likes: <% if @post.likes_counter != nil %>
+     <%= @post.likes_counter %>
+  <% else %>
+  0 
   <% end %>
-</div>
-<% if !@is_liked %>
-  <%= form_with url: user_post_likes_url(@post.author, @post) do |form| %>
-    <%= button_tag class: "text-4xl fixed bottom-5 right-5 text-red-200" do  %>
-      ❤️
+  </div>
+  </div>
+  <div class="card m-3" style="max-width: 540px;">
+
+  <div> <% @post.comments.each do |comment| %> 
+    <%= comment.author.name %> : <%= comment.text %>
     <% end %>
-  <% end %>
-<% else%>
-  <%= form_with url: user_post_like_url(@post.author, @post), method: :delete do |form| %>
-    <%= button_tag class: "text-4xl fixed bottom-5 right-5 text-red-500" do  %>
-      ❤️
+    </div>
+    </div>
+
+    <%= form_with url: "/posts/#{@post.id}/comments", scope: :comment, class: "col-3 shadow p-3 mb-3 mx-3 bg-info rounded", local: true do |f| %>
+      <div class="form-group row mt-3">
+        <%= f.label 'Write a comment', class: "col-form-label text-light" %>
+        <div class=""> 
+          <%= f.text_area :text, rows: 5, class: "form-control shadow rounded", placeholder: "Enter your text here" %>
+        </div>
+      </div>
+      <div class="form-group row justify-content-center">
+        <%= f.submit 'Comment', class: "btn btn-outline-light mt-3" %>
+      </div>
     <% end %>
-  <% end %>
-<% end %>
+
+    <%= form_with url: "/posts/#{@post.id}/likes", scope: :like, class: "col-3 shadow p-1 mb-3 mx-3 bg-info rounded", local: true do |f| %>
+      <div class="form-group row justify-content-center">
+        <%= f.submit 'Like', class: "btn btn-outline-light" %>
+      </div>
+    <% end %>
+
+<%= link_to 'Create new post', new_user_post_path, class: "btn btn-secondary mx-3 mb-3" %>
+
+<%= link_to 'See all posts', user_posts_path(@user), class: "btn btn-secondary mx-3 mb-3" %>
+
