--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BlogApp</title>
+    <title>Blog</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,11 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="d-flex flex-column">
-    <%= render 'layouts/navigation' %>
-    <div id="page-content">
-      <%= yield %>
-    </div>
-    <%= render 'layouts/footer' %>
+  <body>
+    <%= yield %>
   </body>
 </html>
