Add tests and rspecs

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,7 @@
-<section class="user">
-  <%= render "shared/user_card", user: @user %>
-  <div class="user__bio">
-    <h3 class="bio__title">Bio</h3>
-    <p class="bio__text">
-    <%= @user.bio %>
-    </p>
-  </div>
-  <ul class="user__post_list">
-    <% @user.most_recent_posts.each do |post|%>
-    <li>
-        <%= render "shared/post_card", post: post %>         
-    </li>
-    <% end %>
-  </ul>
-  <%= link_to(user_posts_path(user_id: @user.id)) do %>
-    <button type="button" class="user__posts_btn">
-      See all posts
-    </button>
-  <% end %>
-</section>
+<%= render 'user_card' %>
+
+<%= render 'bio' %>
+
+<%= render 'comments_likes' %>
+
+<%= link_to 'See all posts', user_posts_path(@user), class: "btn btn-secondary mx-3 mb-3"%>
