--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,17 @@
-<section class="users">
-  <ul class="users__list">
-    <% @users.each do |user| %>
-    <li>
-      <%= link_to(user_path(id: user.id)) do %>
-        <%= render "shared/user_card", user: user %>
-      <% end %>
-    </li>
-    <% end %>
-  </ul>
-</section>
+<% @users.each do |user| %>
+<div class="card mb-3" style="max-width: 540px;">
+<%= link_to(user) do %>
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src=<%= user.photo %> class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title"><%= user.name %></h5>
+        <p class="card-text"><small class="text-muted">Number of posts: <%= user.posts_counter %></small></p>
+      </div>
+    </div>
+  </div>
+  <% end %>
+</div>
+<% end %>
