--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,8 @@
-<h1 class="text-center mt-4">Create a new Post</h1>
-<%= render 'form' %>
+<div class="card">
+  <div class="card-header">
+    <h1>Create a post</h1>
+  </div>
+  <div class="card-body">
+    <p class="card-text"><%= render 'form', post: @post %></p>
+  </div>
+</div>
