--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,17 +1,16 @@
-<% @users.each do |user| %>
-<div class="card mb-3" style="max-width: 540px;">
-<%= link_to(user) do %>
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src=<%= user.photo %> class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title"><%= user.name %></h5>
-        <p class="card-text"><small class="text-muted">Number of posts: <%= user.posts_counter %></small></p>
-      </div>
-    </div>
+<div id="users">
+    <table class="table table-striped table-bordered table-hover">
+      <thead class="table-dark">
+        <tr>
+          <th scope="col">Photo</th>
+          <th scope="col">Name</th>
+          <th scope="col">Posts</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @users.each do |user| %>
+          <%= render user %>
+        <% end %>
+      </tbody>
+    </table>
   </div>
-  <% end %>
-</div>
-<% end %>
